--- a/deployments/template/template_config.yaml
+++ b/deployments/template/template_config.yaml
@@ -1,21 +1,26 @@
-# This file will define the deployment.env file. If you want to update it later and add monikers, I suggest doing so manually here.
+# This file will define the deployment.env file. If you want to update it later and add monikers, I suggest doing so manually here
 deployment_name: template
 monikers:
-  - name: personal # Monikers are a name for people, clubs, chat rooms, businesses, and other organizations of people.
-    moniker_enabled: true # Will disable the moniker when creating a deployment workflow.
+  - moniker_name: personal # Monikers are a name for people, clubs, chat rooms, businesses, and other organizations of people
+    moniker_enabled: true # Will disable the moniker when creating a deployment workflow
+    moniker_enabled_data_namespaces: # Topics agent will respond to and retrieve data from
+    - wikipedia
+    - wookiepedia
+    - census.gov
     sprites:
       discord:
         discord_sprite_enabled: true
-        enabled_discord_servers:
+        discord_enabled_servers:
           - 111
-        # Requests method - at least one is required  
-        discord_manual_requests_enabled: true # Manual allows for @discord-sprite engagement
-        discord_auto_response: 
-          discord_auto_response_enabled: false # Auto responds automatically to relevant questions
-          discord_auto_response_cooldown: 10 # Time in minutes to cooldown between auto-responding to specific users
-          discord_auto_respond_in_threads: false
+        # Requests method - at least one is required
+        discord_requests_options:  
+          discord_manual_requests_enabled: true # Manual allows for @discord-sprite engagement
+          discord_auto_response: 
+            discord_auto_response_enabled: false # Auto responds automatically to relevant questions
+            discord_auto_response_cooldown: 10 # Time in minutes to cooldown between auto-responding to specific users
+            discord_auto_respond_in_threads: false
         # Channel selection - at least one is required
-        discord_channel_space:
+        discord_channel_options:
           discord_all_channels: 
             discord_all_channels_enabled: false # Respond in all channels
             discord_all_channels_excluded_channels: # List of channels sprite is excluded from replying in
@@ -27,12 +32,16 @@ monikers:
               - 1
               - 1
         discord_user_daily_token_limit: 30000
-      slack: false
+      slack:
+        slack_sprite_enabled: false
+        slack_enabled_servers:
+        slack_requests_options:
+          slack_manual_requests_enabled: true # Manual allows for @slack-sprite engagement
+          slack_auto_response:
+            slack_auto_response_enabled: false # Auto responds automatically to relevant questions
+            slack_auto_response_cooldown: 10 # Time in minutes to cooldown between auto-responding to specific users
+            slack_auto_respond_in_threads: false
       web: false
-    enabled_data_namespaces:
-      - wikipedia
-      - wookiepedia
-      - census.gov
 # Your data sources and index(es) will be configured here. 
 # I suggest you configure your discord/slack/sprite first, and then attempt to add documents. 
 # You can add more data sources as you like. See documentation for complete list of options.
