--- a/deployments/tatum/tatum_deployment_config.yaml
+++ b/deployments/tatum/tatum_deployment_config.yaml
@@ -1,4 +1,4 @@
 # This file will define the deployment.env file. If you want to update it later and add monikers, I suggest doing so manually here
 deployment_name: tatum
 monikers:
-- moniker_name: template_name   # Monikers are a name for people, clubs, chat rooms, businesses, and other organizations of people
+  - moniker_name: tatum # Monikers are a name for people, clubs, chat rooms, businesses, and other organizations of people
